Release v0.9.9: Major HomeActivity refactoring, Glide integration, and project modernization